test/testdata/functions/missing_3_args_error.lox
fun add(a, b, c) {
  print a + b + c;
}

add(); // error: add() missing 3 arguments: a, b, and c
